css changes to alert banner to prevent content overflow on ios devices

--- a/packages/web-components/src/components/va-alert/va-alert.css
+++ b/packages/web-components/src/components/va-alert/va-alert.css
@@ -18,6 +18,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  box-sizing: border-box !important;
+  max-width: 100vw;
 }
 
 :host([full-width='true']) .va-alert-close,
@@ -54,7 +56,7 @@
 
 div.alert {
   display: table;
-  padding: 3.2rem 6.4rem 3.2rem 2.4rem;
+  padding: 3.2rem 1rem 3.2rem 2.4rem;
   width: 100%;
   vertical-align: middle;
   box-sizing: border-box;
